# Generated by Django 4.2.13 on 2024-05-26 13:06

import django.core.validators
from django.db import migrations, models
import django.db.models.deletion
import uuid


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Location',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, help_text='Datetime when the record was created')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='Datetime when the record was last updated')),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, help_text='Public unique identifier for the record', verbose_name='UUID')),
                ('city', models.CharField(help_text='City name', max_length=100, verbose_name='city')),
                ('country', models.CharField(help_text='Country name', max_length=100, verbose_name='country')),
            ],
            options={
                'verbose_name': 'location',
                'verbose_name_plural': 'locations',
            },
        ),
        migrations.CreateModel(
            name='Harbour',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, help_text='Datetime when the record was created')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='Datetime when the record was last updated')),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, help_text='Public unique identifier for the record', verbose_name='UUID')),
                ('name', models.CharField(help_text='Harbour name', max_length=100, verbose_name='name')),
                ('berth_depth_max', models.FloatField(help_text='Maximum berth depth in meters', validators=[django.core.validators.MinValueValidator(0.0)], verbose_name='maximum berth depth')),
                ('harbour_master', models.CharField(help_text='Name of the harbour master', max_length=100, verbose_name='harbour master')),
                ('location', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='harbours', to='harbours.location', verbose_name='location')),
            ],
            options={
                'verbose_name': 'harbour',
                'verbose_name_plural': 'harbours',
            },
        ),
    ]
