# Generated by Django 4.2.13 on 2024-05-28 12:24

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion
import uuid


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='VTSCentre',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, help_text='Datetime when the record was created')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='Datetime when the record was last updated')),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, help_text='Public unique identifier for the record', verbose_name='UUID')),
                ('name', models.CharField(help_text='Name of the VTS centre', max_length=100, verbose_name='name')),
                ('phone', models.CharField(blank=True, help_text='Phone number of the VTS centre', max_length=20, verbose_name='phone')),
                ('email', models.EmailField(blank=True, help_text='Email address of the VTS centre', max_length=255, verbose_name='email')),
            ],
            options={
                'verbose_name': 'VTS centre',
                'verbose_name_plural': 'VTS centres',
            },
        ),
        migrations.CreateModel(
            name='Operator',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, help_text='Datetime when the record was created')),
                ('updated_at', models.DateTimeField(auto_now=True, help_text='Datetime when the record was last updated')),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, help_text='Public unique identifier for the record', verbose_name='UUID')),
                ('role', models.CharField(blank=True, help_text='Role of the operator', max_length=100, verbose_name='role')),
                ('user', models.OneToOneField(help_text='User account of the operator', on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL, verbose_name='user')),
                ('vts_centre', models.ForeignKey(help_text='VTS Centre the operator is assigned to', on_delete=django.db.models.deletion.CASCADE, related_name='operators', related_query_name='operator', to='vts.vtscentre', verbose_name='VTS Centre')),
            ],
            options={
                'verbose_name': 'operator',
                'verbose_name_plural': 'operators',
            },
        ),
    ]
